16/3/2004:	v2.4.2
	- added german translations

14/4/2004:	v2.4.1
	- created Changelog
	- lang menu build from 'languages' file
	- corrected help text (#35630)
	- added german & slovak translations