@@ -21,7 +21,7 @@ Navigační klávesy<br><br>
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<h3><a name="startup">Splash Mode Selection</a></h3>
+<h3><a name="startup">Výběr režimu splashe</a></h3>
 
 Splash režim můžete měnit pomocí klávesy <em>F3</em>. Použít můžete také parametr jádra <a href="#o_splash">splash</a>.<br>
 <br>
@@ -35,12 +35,20 @@ Splash režim můžete měnit pomocí klávesy <em>F3</em>. Použít můžete ta
 
 
 <hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-<h3><a name="keytable">Výběr klávesové mapy</a></h3>
+<h3><a name="keytable">Výběr jazyka a klávesové mapy</a></h3>
 
-Stisknutím klávesy <em>F2</em> získáte seznam klávesových map.<br><br>
+Stisknutím klávesy <em>F2</em> získáte seznam klávesových map a dostupných jazyků.<br><br>
 
 Tato volba je zatím experimentální a nemusí vždy fungovat.
 (Proto není <em>F2</em> v zobrazené nabídce.)
+
+<br><br>Návrat do <a href="#opt">startovací nabídky</a>
+
+
+<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<h3><a name="profile">Volba profilu</a></h3>
+
+Stiknutím <em>F4</em> můžete zvolit profil. Systém se spustí s nastaveními uloženými v tomto profilu.
 
 <br><br>Návrat do <a href="#opt">startovací nabídky</a>
 
