@@ -1,3 +1,7 @@
+17/3/2004:	v2.4.3
+	- new/updated czech texts
+	- reworked themes Makefile
+
 16/3/2004:	v2.4.2
 	- added german translations
 
